# Whisper2Obsidian

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
src/whisper2obsidian/: __init__.py  config.py  graph.py  main.py  state.py
src/whisper2obsidian/nodes/: analysis.py  file_writer.py  note_writer.py  transcription.py  vault_indexer.py  watcher.py
src/whisper2obsidian/scripts/: vault_harvest.py  wipe_db.py
src/whisper2obsidian/services/: groq_rate_limiter.py  metadata_parser.py  vault_index.py
src/whisper2obsidian/templates/: books.md.j2  course.md.j2  default.md.j2  idea.md.j2  meeting.md.j2  podcast.md.j2  research.md.j2  shopping.md.j2  todo.md.j2
tests/: conftest.py  test_metadata_parser.py  test_rate_limiter.py  test_watcher.py
